[gd_scene load_steps=7 format=3 uid="uid://bvej6r1hnoyte"]

[ext_resource type="Script" path="res://scenes/cutscene.gd" id="1_bpqpm"]
[ext_resource type="StyleBox" path="res://assets/cutscene1box.tres" id="3_ukkrw"]
[ext_resource type="Texture2D" uid="uid://djdkq5m8hjrmr" path="res://assets/sprites/tomato_icon.png" id="4_bm0ok"]
[ext_resource type="Script" path="res://scenes/typewriter.gd" id="5_5q1xc"]
[ext_resource type="AudioStream" uid="uid://bnfwomlp04au2" path="res://assets/sounds/typewritertalking/sfx_Typewriter.ogg" id="6_2sskp"]
[ext_resource type="PackedScene" path="res://scenes/reusable/clickweiter_hint.tscn" id="7_hgm7o"]

[node name="Cutscene" type="Node2D"]
script = ExtResource("1_bpqpm")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="background" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -984.0
offset_top = -563.0
offset_right = 977.0
offset_bottom = 527.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_ukkrw")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="Panel" type="Panel" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_ukkrw")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 720)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_ukkrw")

[node name="Sprite2D" type="Sprite2D" parent="Control/HBoxContainer/VBoxContainer/Panel"]
visible = false
position = Vector2(570, 429)
texture = ExtResource("4_bm0ok")

[node name="Panel2" type="Panel" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("3_ukkrw")

[node name="Typewriter" type="Control" parent="Control/HBoxContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_5q1xc")
typespeed = 0.25

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Control/HBoxContainer/VBoxContainer/Panel2/Typewriter"]
position = Vector2(377, 100)
stream = ExtResource("6_2sskp")
volume_db = 1.5
max_polyphony = 30
bus = &"TypewriterPitcher"

[node name="Label" type="Label" parent="Control/HBoxContainer/VBoxContainer/Panel2/Typewriter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Ascension to a higher form of existence?"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
visible_characters_behavior = 1

[node name="clickweiterHint" parent="Control/HBoxContainer/VBoxContainer/Panel2" instance=ExtResource("7_hgm7o")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 177.0
offset_bottom = 32.0
grow_horizontal = 1
grow_vertical = 1

[node name="Panel3" type="Panel" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("3_ukkrw")

[node name="Label" type="Label" parent="Control/HBoxContainer/Panel3"]
self_modulate = Color(1, 1, 1, 0.145098)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Hold 'c' to Skip"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/HBoxContainer/Panel3/Label"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
show_percentage = false

[node name="Camera2D" type="Camera2D" parent="."]
